--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Thu Mar 05 17:13:50 EST 2015
+#Sun Mar 08 16:56:29 EDT 2015
 spawn-protection=16
 generator-settings=
 force-gamemode=false
