--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Fri Oct 30 18:47:00 EDT 2015
+#Sun Nov 01 15:46:20 EST 2015
 spawn-protection=16
 generator-settings=
 force-gamemode=false
@@ -34,5 +34,5 @@ generate-structures=true
 online-mode=true
 max-build-height=256
 level-seed=
-motd=A Minecraft Server
 enable-rcon=false
+motd=A Minecraft Server
